# coppa

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  STYLEGUIDE  client_test.cpp  coppa.hpp  server_test.cpp  test.cpp
coppa/: coppa.dynamic.hpp  coppa.hpp  coppa.oscquery.hpp  map.hpp  string_view.hpp
coppa/device/: local.hpp  messagetype.hpp  remote.hpp  remoteclient.hpp  zeroconf_server.hpp
coppa/exceptions/: BadRequest.hpp
coppa/minuit/: minuit.hpp  parameter.hpp  parameter_ostream.hpp
coppa/minuit/device/: local.hpp  message_handler.hpp  minuit_common.hpp  minuit_listening_local.hpp  minuit_listening_local_device.hpp  minuit_local_behaviour.hpp  minuit_local_device.hpp  minuit_name_table.hpp  minuit_remote_behaviour.hpp  minuit_remote_device.hpp  minuit_remote_future.hpp  minuit_remote_future_behaviour.hpp  osc_common.hpp  osc_device.hpp  osc_local_device.hpp  osc_message_handler.hpp
coppa/minuit/osc/: osc.hpp
coppa/osc/: oscmessagegenerator.hpp  oscreceiver.hpp  oscsender.hpp
coppa/oscquery/: README.md  device.hpp  json.hpp  map.hpp  oscquery.hpp  parameter.hpp  protocol.md  websockets.hpp
coppa/oscquery/device/: local.hpp  message_handler.hpp  query_answerer.hpp  query_parser.hpp  queryanswerer.hpp  queryparser.hpp  remote.hpp  remoteclient.hpp
coppa/oscquery/json/: keys.hpp  parser.detail.hpp  parser.hpp  writer.detail.hpp  writer.hpp
coppa/oscquery/osc/: osc.hpp
coppa/ossia/: parameter.hpp  parameter_ostream.hpp
coppa/ossia/device/: device_with_callbacks.hpp  message_handler.hpp  minuit_common.hpp  minuit_listening_local_device.hpp  minuit_local_behaviour.hpp  minuit_local_device.hpp  minuit_name_table.hpp  minuit_remote_behaviour.hpp  minuit_remote_device.hpp  minuit_remote_future.hpp  minuit_remote_future_behaviour.hpp  osc_common.hpp  osc_device.hpp  osc_local_device.hpp  osc_message_handler.hpp
coppa/ossia/osc/: osc.hpp
coppa/protocol/osc/: oscmessagegenerator.hpp  oscreceiver.hpp  oscsender.hpp
coppa/protocol/websockets/: client.hpp  server.hpp
coppa/tools/: random.hpp
tests/benchmarks/: benchmark.cpp
tests/examples/: client_test.cpp  server_test.cpp
tests/examples/ossia/: ossia_minuit_listener_local.cpp  ossia_minuit_remote.cpp  ossia_minuit_remote_future.cpp  ossia_osc_server.cpp
tests/examples/qt/: ThreadManager.cpp  ThreadManager.hpp  qt_expose_object.cpp  qt_update_object.cpp
tests/examples/zeroconf/: zc_client.cpp  zc_server.cpp
tests/tests/json/: parse_examples.cpp  parser.cpp  writer.cpp
tests/tests/json/conformance/1/: expected.json  message.json  original.json
tests/tests/json/json_files/: get_range_answer.json  get_value_answer.json  path_changed_remove.json  root.json  web_example2.json
tests/tests/oscquery/: map.cpp
tests/tests/ossia/: conversion_tests.cpp  ossia_test.cpp
tests/tests/ossia_2/: test.cpp
